--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -2277,13 +2277,13 @@
  hsa_hanseatic_mecklenburg_mission_title:0 "ヴィスマールとロストック"
  hsa_hanseatic_mecklenburg_mission_desc:0 "我々のヴィスマールやロストックの都市との強い結びつきは、彼らがメクレンブルク公爵の意志に従うことを防げなかった。たとえ、我々自身の利益に反対する時でさえも。我々は彼らの非協力的な態度をあまりにも長く許してきたのだ。今こそ、我々は彼らをより厳しく管理する時だ。"
  hsa_baltic_trade_mission_title:0 "バルト海交易の保護"
- hsa_baltic_trade_mission_desc:1 "The wealth of [Root.GetName] and the Hanseatic ports is built upon funneling the Baltic trade through our ports. In past years, we have let our control over those parts slip somewhat. We must reimpose our presence there to ensure that we can remain competitive against the new rising powers of the Baltic."
+ hsa_baltic_trade_mission_desc:1 "[Root.GetName]とハンザの港の富は、バルト海の交易を我々の港に送り込むことで築かれている。過去数年間、我々はそれらの地方の支配をいくらか低下させてきた。我々は、バルト海の新興勢力に対して競争力を維持できるようにするため、そこに我々の存在を再度示す必要がある。"
  hsa_seize_jutland_mission_title:0 "ユトランド半島の奪取"
- hsa_seize_jutland_mission_desc:1 "For centuries, traders have had the choice of sending their wares over land via our markets or sailing around Jutland, going through Denmark instead. We must end this dichotomy by making Jutland a possession of our central office. Then, all traders going between the Baltic and the West will pass via ports controlled by us and our accolades."
+ hsa_seize_jutland_mission_desc:1 "何世紀にもわたって、交易商は商品を国内の市場経由で陸路に送るか、代わりにデンマークを経由してユトランド半島を航行するという選択肢を持っていた。我々はユトランドを中央政府の所有とすることで、この二分法を終わらせなければならない。こうして、バルト海と西洋の間を通るすべての交易商は、我々と栄誉により支配された港を経由する。"
  hsa_subjugate_norway_mission_title:0 "ノルウェーの平定"
  hsa_subjugate_norway_mission_desc:0 "ノルウェー人は長い間、ハンザ同盟の影響を取り除くことを望んできた。我々は彼らのこの願いを叶えてやるべきではない。代わりに、我々は自分たちを彼らの主君とすべきだ！"
  hsa_queen_of_the_league_mission_title:0 "女王同盟"
- hsa_queen_of_the_league_mission_desc:1 "Our illustrious and opulent city, the Queen of the Baltic League, is the true heart of our nation. We must renovate it to give it the splendor worthy of its status."
+ hsa_queen_of_the_league_mission_desc:1 "バルト同盟の女王であり輝かしく豪華なこの都市は、我が国の真の心臓部である。我々はそれにその状態に値する素晴らしさを与えるため改造しなければならない。"
  hsa_return_visby_mission_title:0 "ヴィスビューの同盟復帰"
  hsa_return_visby_mission_desc:0 "ゴットランドの主要都市であるヴィスビューは、最近まで東バルト海におけるハンザ同盟の活動拠点であり、ノヴゴロド、リガ、リューベックの間の主要な中継地として機能していた。しかし、カルマル同盟の台頭により、我々は都市への影響力の低下を防ぐことができなかった。バルト海の支配を再び主張するには、島に対するデンマークとスウェーデンの主張に異議を申し立てる必要がある。"
  hsa_return_novgorod_mission_title:0 "ノブゴロド・コントール"
@@ -2300,8 +2300,8 @@
  hsa_north_sea_trade_mission_desc:0 "過去において、我々の主な富の源は常に東方との交易であった。しかし今、植民地からヨーロッパへと流れる莫大な富によって、ロシアの富はますます小さくなっている。これらの新しい交易路の北側は、北海を経由して低地地方とイングランドへと通じているが、我々は代わりに[Root.Capital.GetCapitalName]へと航海するよう交易商を説得することもできるだろう…"
  hsa_newfoundland_trading_ports_mission_title:0 "ニューファンドランド島の交易港"
  hsa_newfoundland_trading_ports_mission_desc:0 "探検家たちは、はるか西の豊かな新しい土地について語っている。その開拓を他人に任せるのは賢明ではない。"
- hsa_new_lubeck_mission_title:1 "Stardust Explorers"
- hsa_new_lubeck_mission_desc:1 "The New World offers many opportunities for the ambitious. By establishing large-scale colonies there, we can greatly expand the old Baltic League in new, unforeseen directions."
+ hsa_new_lubeck_mission_title:1 "星屑の探検者"
+ hsa_new_lubeck_mission_desc:1 "新世界は野心的な人々に多くの機会を提供する。そこに大規模な植民地を設立することにより、我々は古いバルト同盟を新たな予想もしない方向へと大きく拡大することができる。"
  hsa_merchant_navy_mission_title:0 "商船隊"
  hsa_merchant_navy_mission_desc:0 "海賊や私掠船は我々の商船を奪うことで自身を豊かにしようとしている。我々は捕獲者からそれらを守ることができる艦隊を構築しなければならない。"
  hsa_hanseatic_shipwrights_mission_title:0 "ハンザの船大工"
@@ -2328,12 +2328,12 @@
  hsa_united_league_modifier:0 "統一したハンザ同盟"
  desc_hsa_united_league_modifier:0 "我々はハンザ同盟の力を一新し、統一国家へと再編成した。にもかかわらず、我々は自分たちの伝統を決して忘れず、多くの外交的な協力者を持つことに伴う要求に対処するための十分なものを備えている。"
  new_lubeck_modifier:0 "アメリカ植民地"
- desc_new_lubeck_modifier:1 "We have established colonies in America, allowing the old Baltic League to evolve in new, unforeseen directions."
+ desc_new_lubeck_modifier:1 "我々はアメリカに植民地を設立し、古いバルト同盟が新しく予想もしない方向に進化することを可能にしている。"
  adler_von_lubeck_modifier:0 "海軍の覇権"
  desc_adler_von_lubeck_modifier:0 "我々の壮大な艦隊は、バルト海と北海を支配している。我々の大海原の支配に挑戦する勇気を持つ者はいない！"
  hsa_baltic_trade_modifier:0 "保護されたバルト海交易"
  desc_hsa_baltic_trade_modifier:0 "我々は、伝統的なハンザ同盟の富の源であるバルト海に我々の力を再び課した。東からの航海で、リューベックを敢えて無視する者はいない！"
- hanseatic_queen_modifier:1 "The Queen of the Baltic League"
+ hanseatic_queen_modifier:1 "バルト同盟の女王"
  desc_hanseatic_queen_modifier:1 "我々の街の素晴らしさは、[Root.GovernmentName]と共に事業を行う多くの芸術家志望者、知識人、外国の要人たちを魅了している。"
  hanseatic_bookkeeping_modifier:0 "ハンザ式簿記"
  desc_hanseatic_bookkeeping_modifier:0 "我々の勤勉な簿記係は、すべての金銭がそれが属する場所ー我々の国庫へと到達することを保証する。"
