--- a/source/localisation/hnn_l_english.yml
+++ b/source/localisation/hnn_l_english.yml
@@ -5,27 +5,27 @@
  encounters_in_the_sun_ea:0 "Encounters in the Sun"
  neverending_dunes:0 "Neverending Dunes"
  the_long_walk_ea:0 "The Long Walk"
- take_native_american_land_desc:1 "War goal is to show them superiority by winning battles."
- ACTOR_ALREADY_FEDERATION:0 "You are already a unified Federation and cannot join other Federations.\n"
- RECEPIENT_ALREADY_FEDERATION:0 "Cannot invite $COUNTRY$ because they are already a unified Federation.\n"
- INVITE_ACTOR_ALREADY_FEDERATION:0 "You cannot invite more countries into a unified Federation.\n"
- UNIFIED_FEDERATION_TEXT:0 "You are an integrated federation."
- UNIFIED_FEDERATION_TITLE:0 "Integrated Federation"
- HUSSARS_NAME:0 "$HOME$'s $NUM$$ORDER$ Winged Hussars"
- MODIFIER_HAS_HUSSARS:0 "Allows Winged Hussars"
- HUSSARS_CANT_HAVE:0 "Your nation cannot raise Winged Hussars."
- HUSSARS_DESC:1 "The Hussars are a powerful yet rare unit. Delivering devastating charges, they deal tremendous amounts of damage to the morale of the enemy while also excelling at the §YShock Phase§!. \n\nThe number of §YHussar§! regiments is calculated based on the development of provinces with accepted cultures at a rate of 1 unit per 100 development."
+ take_native_american_land_desc:1 "戦争の目標は戦闘に勝利して優位性を示すことです。"
+ ACTOR_ALREADY_FEDERATION:0 "連邦を統一した後に、他の連邦へと加入することはできません。\n"
+ RECEPIENT_ALREADY_FEDERATION:0 "既に連邦を統一した国家である$COUNTRY$を招待することはできません。\n"
+ INVITE_ACTOR_ALREADY_FEDERATION:0 "統一された連邦には国家を招待することはできません。\n"
+ UNIFIED_FEDERATION_TEXT:0 "既に統合済みの連邦です。"
+ UNIFIED_FEDERATION_TITLE:0 "統合済みの連邦"
+ HUSSARS_NAME:0 "$HOME$第$NUM$有翼重騎兵"
+ MODIFIER_HAS_HUSSARS:0 "有翼重騎兵の許可"
+ HUSSARS_CANT_HAVE:0 "あなたの国家は有翼重騎兵を召集できません。"
+ HUSSARS_DESC:1 "ユサールは強力かつ希少なユニットです。§Y白兵フェーズ§!では、圧倒的な破壊力を持つ突撃を行い、敵の士気に多大なダメージを与えます。\n\n§Yユサール§!連隊の数は、受容文化の州の開発度に基づき、100開発度につき1ユニットの割合で算出されます。"
  REGCAT_hussars:0 "有翼重騎兵"
  hussars_regiment:0 "有翼重騎兵"
  ADD_HUSSARS_SUB_UNIT_EFFECT:0 "Get '§GWinged Hussars§!' $UNIT$ in $WHERE|Y$."
- HUSSARS_REGIMENT:0 "Hussars Regiment\n$EFFECT$"
- HAVE_LESS_HUSSARS_THAN:0 "Have less Winged Hussars Regiments than $VALUE|Y$.\n"
- HAVE_AT_LEAST_HUSSARS_THAN:0 "Have at least $VALUE|Y$ Winged Hussars Regiments.\n"
- MODIFIER_AMOUNT_OF_HUSSARS:0 "Possible Winged Hussars"
- MODIFIER_LOCAL_AMOUNT_OF_HUSSARS:0 "Possible Winged Hussars from development"
+ HUSSARS_REGIMENT:0 "ユサール連隊\n$EFFECT$"
+ HAVE_LESS_HUSSARS_THAN:0 "有翼重騎兵が$VALUE|Y$より少ない。\n"
+ HAVE_AT_LEAST_HUSSARS_THAN:0 "$VALUE|Y$以上の有翼重騎兵連隊を持っている。\n"
+ MODIFIER_AMOUNT_OF_HUSSARS:0 "召集可能な有翼重騎兵"
+ MODIFIER_LOCAL_AMOUNT_OF_HUSSARS:0 "開発度から召集可能な有翼重騎兵"
  MODIFIER_CAN_RECRUIT_HUSSARS:0 "§Y有翼重騎兵§!が雇用可能になる"
  HUSSARS_REGIMENT_TYPE:0 "有翼重騎兵"
- STATE_HUSSARS_CREATED_REGIMENTS:0 "This will cost $MILAMOUNT|Y$ £mil£, and $NUM|Y$ Winged Hussars will spawn in $PROV|Y$.\nDo you want to create a Winged Hussars regiment?"
+ STATE_HUSSARS_CREATED_REGIMENTS:0 "$PROV|Y$での有翼重騎兵の召集には$MILAMOUNT|Y$£mil£と$NUM|Y$が必要です。\n有翼重騎兵連隊を作成しますか？"
  crowned_in_tallin:0 "Crowned in Tallin"
  knights_of_swords:0 "Knights of Swords"
  rise_of_the_balts:0 "Rise of The Balts"
@@ -38,16 +38,16 @@
  karma:0 "カルマ"
  positive_karma:0 "正のカルマ"
  negative_karma:0 "負のカルマ"
- BREAK_ALLIANCE_EFFECT:0 "Breaks alliance with $WHO|Y$"
+ BREAK_ALLIANCE_EFFECT:0 "$WHO|Y$との同盟を破棄する"
  MODIFIER_MILITARY_TACTICS:0 "軍事戦術：$VALUE|G$"
  ONLY_HUSSARS_MODIFIER:0 "§YAffects only Hussars Regiments§!"
- BANNER_LIMIT_CULTURE:0 "$PROVINCE$ is a $CULTURE$ province, so you cannot recruit Banner Regiments here."
+ BANNER_LIMIT_CULTURE:0 "$PROVINCE$は$CULTURE$文化の州なので、八旗連隊を召集できません。"
  LionsOfTheNorthDLC:0 "Lions of the North"
  POLICY_NAME:0 "$POLICY|Y$"
  POLICY_GROUP_IN_COLOR:0 "（+ $POLICY|Y$ ）"
  MODIFIER_REASONS_TO_ELECT:0 "Reasons to Elect"
  POLICY_GROUP:0 "（+ $POLICY$ ）"
- HUSSARS_LIMIT_CULTURE:0 "$PROVINCE$ is a $CULTURE$ province, so you cannot recruit Winged Hussars Regiments here."
+ HUSSARS_LIMIT_CULTURE:0 "$PROVINCE$は$CULTURE$文化の州なので、有翼重騎兵連隊を召集できません。"
  MODIFIER_MANPOWER_IN_OWN_CULTURE_PROVINCES:0 "主要文化を持つ州での人的資源"
- MODIFIER_MANPOWER_IN_ACCEPTED_CULTURE_PROVINCES:0 "Manpower in Accepted Culture provinces"
- MODIFIER_MANPOWER_IN_CULTURE_GROUP_PROVINCES:0 "Manpower in same Culture Group provinces"
+ MODIFIER_MANPOWER_IN_ACCEPTED_CULTURE_PROVINCES:0 "受容文化を持つ州での人的資源"
+ MODIFIER_MANPOWER_IN_CULTURE_GROUP_PROVINCES:0 "同じ文化グループを持つ州での人的資源"
