--- a/source/localisation/leviathan_l_english.yml
+++ b/source/localisation/leviathan_l_english.yml
@@ -681,7 +681,7 @@
  NAMED_MODIFIER_SIEGE_ABILITY:0 "$ADJ$包囲能力：$NUM$"
  LEADER_SIEGE_ABILITY:0 "指揮官包囲能力：$VAL$"
  TRADING_POLICY_BONUS:0 "交易政策ボーナス：$VAL$"
- PROPAGATE_RELIGION_TRADING_POLICY:1 "You can convert provinces of a Trade Node. Christian, Muslim and Jewish provinces are excluded unless stated otherwise.\n"
+ PROPAGATE_RELIGION_TRADING_POLICY:1 "交易ノードに属する州を改宗できます。ただし特に記載がない場合、キリスト教、イスラム教、ユダヤ教の州は対象から除外されます。\n"
  EXPAND_CAPITAL_TERRITORY:0 "首都は、ステートに属する州でなければなりません。"
  LAND_SHARE_PEACE_DEAL:0 "$ESTATE$による土地所有は$VAL$補正されます。"
  PROV4934:0 "マウイ"
@@ -1248,7 +1248,7 @@
  desc_religious_intolerance_mod:0 "国教に従わない者に対する不寛容の新しい波が始まった。"
  religious_intolerance_tooltip:0 "自国宗教以外の他宗教も迫害される"
  estate_regency_events.7.t:0 "勤王派の摂政"
- estate_regency_events.7.d:0 "摂政に任じられた者が君主と国家に忠実であることは常に期待していることですが、職権の濫用、あからさまな不忠、指導的立場になってすぐに権力の掌握を図ろうとすることなどがなければ、それは十分に満足できることなのです。[Root.Monarch.GetName]はその例外です。忠実で礼儀を弁えており、摂政の一派からの献策は、摂政には最高のものしか期待していないですか、この数ヶ月で最高の知らせでした。"
+ estate_regency_events.7.d:0 "我々は摂政に任じられた者に君主と国家に忠実であることを常に期待するが、職権の濫用、あからさまな不忠、指導的立場になってすぐに権力の掌握を図ろうとすることなどがなければ、それで十分満足できる。[Root.Monarch.GetName]はその例外である。忠実で礼儀を弁えており、我々が[Root.Monarch.GetHerHim]に最高のものを期待している為、摂政の一派からの献策は、この数ヶ月で最高の知らせであった。"
  estate_regency_events.7.a:0 "たまにはいい知らせってのもあるもんなんだな！"
  loyalist_leader_mod:0 "王党派のリーダー"
  desc_loyalist_leader_mod:0 "摂政は王室に忠誠を誓っている"
