--- a/source/localisation/rule_britannia_l_english.yml
+++ b/source/localisation/rule_britannia_l_english.yml
@@ -120,7 +120,7 @@
  anglican_religion_desc:0 "聖公会は国家元首が教会の首長をも務める組織を持つプロテスタントの一形態である。神学的及び制度的に、聖公会は改革派の清教徒や大陸のプロテスタントからの影響を受けながらも尚、カトリックの多くの要素を保持している。"
  anglican:0 "聖公会"
  divorce_consort_aspect:0 "§Y配偶者と離婚§!"
- desc_divorce_consort_aspect:1 "The monarch is concerned that his consort has failed to give him a suitable heir. She needs to go.\n\nWe gain §G12§! £adm£, £dip£ and £mil£ for each stat from the divorced consort missing to reach the maximum value respectively.\n§Y(A 6/6/6 consort would not give any monarch power while a 0/0/0 consort would give 72 of each category.)§!"
+ desc_divorce_consort_aspect:1 "我が君は、配偶者が後継者にふさわしい子を産むことに失敗したと問題視している。彼女は出ていくべきだ。\n\n離婚した配偶者から、能力の最大値から£adm£、£dip£、£mil£を引いたものから§G12§!倍した各君主点を得る。\n§Y(6/6/6の配偶者ならば何も得ないが、0/0/0ならば72点の各君主点を獲得する。)§!"
  gain_consort_aspect:1 "§Y地方貴婦人の婚姻§!"
  desc_gain_consort_aspect:0 "国内には家柄が良く我々の君主との婚姻を望む独身者が多数いる。配偶者がいない現状を鑑みれば、この求婚者たちを考慮する必要がある。"
  dissolve_monasteries_aspect:0 "§Y修道院の解体§!"
@@ -470,8 +470,8 @@
  PROVINCE_IS_NOT_ON_AN_ISLAND:1 "$PROVINCE|Y$は、島にはありません。\n"
  PROVINCE_IS_ON_AN_ISLAND:1 "$PROVINCE|Y$は、島にあります。\n"
  INNOVATIVENESS_INCREASE_DAYS_LEFT:0 "（$VAL|+1$の§Y革新性§!を獲得、残り$DAYS|Y$日）"
- gain_consort_aspect_tt:0 "[Root.Monarch.GetName] marries a new Consort. Increase the Chance of a New Heir by §G100%§! for §Y15 years§!."
- a_new_consort_heir_modifier:0 "New Royal Consort"
+ gain_consort_aspect_tt:0 "[Root.Monarch.GetName]は新たな配偶者と結婚する。新たな後継者の確率を§Y15年§!の間§G100%§!増加させる。"
+ a_new_consort_heir_modifier:0 "新たな王室の配偶者"
  desc_a_new_consort_heir_modifier:0 "A new heir might emerge for our country thanks to the help of our [Root.Monarch.GetTitle]'s new consort"
  dissolve_monasteries_aspect_tt:0 "The §Y[Root.GetChurchOrFallbackName]§! loses §Y10§! influence for §Y15 years§!."
  dissolve_monasteries_aspect_ct:0 "Dissolved Monasteries: $VAL|Y$§Y%§!"
@@ -496,9 +496,9 @@
  desc_anglican_militarized_church_aspect:0 "Our armies are using religious, Anglican icons during their campaigns, increasing their morale and, some assume so, luck."
  danish_admirality:0 "Danish Admiralty"
  danish_admirality_desc:0 "Others brag about their superior ship models or their sailors who fight until their pointless death. We however know it better. No fleet, as good as their wood and men could be, can achieve victory without a good leader. We shall embrace this attitude for our navy."
- norwegian_sailors:0 "Norwegian Sailors"
+ norwegian_sailors:0 "ノルウェー人水兵"
  norwegian_sailors_desc:0 "Ever since the very foundation of our kingdom, our people lived off the ocean and the coast. Fishing, raiding, sea battles - our sailors have more experience than any other naval country - and we shall promote this expertise even further."
- norwegian_sailors_upgraded:0 "Norwegian Sailors"
+ norwegian_sailors_upgraded:0 "ノルウェー人水兵"
  norwegian_sailors_upgraded_desc:0 "Ever since the very foundation of our kingdom, our people lived off the ocean and the coast. Fishing, raiding, sea battles - our sailors have more experience than any other naval country - and we shall promote this expertise even further."
  dutch_trade_fleet:0 "Dutch Trade Fleet"
  dutch_trade_fleet_desc:0 "The nations of Europe use their navies to project their power through warfare on the sea. We on the other hand shall use our navy to reach the furthest corners of the world so we can trade with foreign cultures while our neighbors bombard eachother's coasts."
