--- a/source/localisation/emperor_l_english.yml
+++ b/source/localisation/emperor_l_english.yml
@@ -96,7 +96,7 @@
  ABOUT_NOW_TXT:0 "現在の状況"
  ALREADY_REACHED_TOOLTIP:0 "§Y現在§!、次の改革を制定するのに十分です！"
  UNIT_IS_SHATTERED:0 "このユニットは損傷しています、回復するのを待ちましょう。"
- JANISSARY_LIMIT_RELIGION:0 "$PROVINCE$は$RELIGION$の州のため、イェニチェリはここでは召集できません。"
+ JANISSARY_LIMIT_RELIGION:0 "$PROVINCE$は$RELIGION$の州のため、イェニチェリを召集できません。"
  JOIN_TRADE_LEAGUE_EFFECT:0 "§Y$WHO$§Wは我々の貿易同盟に参加します。\n"
  TRANSFER_TRADE_POWER_EFFECT:0 "§Y$WHO$§Wは我々に交易力の移譲をするでしょう。\n"
  custom_mercantilism_cost:0 "重商主義的傾向"
@@ -298,7 +298,7 @@
  building_coastal_defence:0 "沿岸防衛"
  building_naval_battery:0 "沿岸砲台"
  COASTAL_DEF:0 "沿岸"
- MARINE_NAME:0 "$HOME$第$NUM$$ORDER$海兵隊"
+ MARINE_NAME:0 "$HOME$第$NUM$海兵隊"
  ADD_MARINE_SUB_UNIT_EFFECT:0 "§Y$WHERE$§!で「§G海兵隊§!」$UNIT$を得ます。"
  REGCAT_marines:0 "海兵隊"
  MARINE_REGIMENT_TYPE:0 "海兵隊"
@@ -775,8 +775,8 @@
  REGCAT_revolutionary_guard:0 "革命衛兵"
  REVOLUTIONARY_GUARD_DESC:0 "革命衛兵はあなたの軍の精鋭の連隊です。彼らは受けるダメージがより少なく、より素早く訓練できますが、維持費ははるかに高価です。"
  BUILD_SPECIAL_UNIT_TOOLTIP:0 "$CATEGORY$$TYPE$\n"
- JANISSARY_NAME:0 "$HOME$第$NUM$$ORDER$イェニチェリ隊"
- REVOLUTIONARY_GUARD_NAME:0 "$HOME$第$NUM$$ORDER$衛兵"
+ JANISSARY_NAME:0 "$HOME$第$NUM$イェニチェリ"
+ REVOLUTIONARY_GUARD_NAME:0 "$HOME$第$NUM$衛兵"
  PRIVILEGE_NO_LONGER_VALID_TITLE:0 "階級特権の変更"
  PRIVILEGE_NO_LONGER_VALID_DESC:0 "国内状況の変化にともない、$ESTATE|Y$にはもはや$PRIVILEGE|Y$の特権はありません$EFFECTS$"
  PRIVILEGE_NO_LONGER_VALID_EFFECTS:0 "：\n$EFFECTS|Y$"
