--- a/source/localisation/modifers_l_english.yml
+++ b/source/localisation/modifers_l_english.yml
@@ -66,8 +66,8 @@
  MODIFIER_MONTHLY_MILITARIZED_SOCIETY:0 "国家の軍事化"
  MODIFIER_REINFORCE_COST:0 "補充コスト"
  MODIFIER_ENFORCE_RELIGION_COST:1 "戦争での強制改宗コスト"
- MODIFIER_AMOUNT_OF_BANNERS:0 "有効な満州八旗"
- MODIFIER_LOCAL_AMOUNT_OF_BANNERS:0 "有効な満州八旗"
+ MODIFIER_AMOUNT_OF_BANNERS:0 "召集可能な八旗"
+ MODIFIER_LOCAL_AMOUNT_OF_BANNERS:0 "召集可能な八旗"
  MODIFIER_CAV_TO_INF_RATIO:0 "騎兵と歩兵の比率"
  MODIFIER_INSTITUTION_GROWTH:0 "制度の発展"
  harsh_treatment:0 "過酷な処置"
@@ -2310,4 +2310,4 @@
  icelanding_fisher_sea:0 "Icelanding Fishing Sea"
  desc_icelanding_fisher_sea:0 "The waters off the coast of Iceland is a fruitful sea filled with cod, which is highly sought after in England and Germany. As such, Iceland attracts many foreign fishermen."
  MODIFIER_LOCAL_OWN_COAST_NAVAL_COMBAT_BONUS:0 "Naval Combat Local Bonus off owned coast"
- MODIFIER_MAY_CONVERT_TERRITORIES:0 "May convert religion in territories."
+ MODIFIER_MAY_CONVERT_TERRITORIES:0 "テリトリーの宗教が改宗可能になる"
