--- a/source/localisation/sprite_packs_l_english.yml
+++ b/source/localisation/sprite_packs_l_english.yml
@@ -275,12 +275,12 @@
  dlc111_RWA_sprite_pack:0 "ルワンダのスプライト"
  dlc111_SKA_sprite_pack:0 "東バントゥーのスプライト"
  dlc111_ZIM_sprite_pack:0 "アフリカ南部のスプライト"
- dlc116_EST_sprite_pack:0 "Baltic Sprites"
+ dlc116_EST_sprite_pack:0 "バルトのスプライト"
  dlc116_SMI_sprite_pack:0 "サーミのスプライト"
  dlc116_ICE_sprite_pack:0 "アイスランドのスプライト"
  dlc116_RIG_sprite_pack:0 "リガのスプライト"
  dlc116_NOR_sprite_pack:0 "ノルウェーのスプライト"
- dlc116_NOR_b_sprite_pack:0 "Norway Ski Sprites"
+ dlc116_NOR_b_sprite_pack:0 "ノルウェースキーのスプライト"
  dlc116_DAN_sprite_pack:0 "デンマークのスプライト"
  dlc116_FIN_sprite_pack:0 "フィンランドのスプライト"
  dlc116_SHL_sprite_pack:0 "ホルシュタインのスプライト"
